# soundklips-proj

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: app.py  config.py
app/api/: __init__.py  account.py  audio_data.py  error_handling.py  test_api.py
app/api/logic/: __init__.py  account_logic.py  audio_data_logic.py
app/model/: database.py  model.py
app/routes/: page_routes.py
app/utils/: auth.py  google_storage.py  utils.md
soundklips_react/: .env  package-lock.json  package.json
soundklips_react/public/: index.html
soundklips_react/src/: App.css  App.js  App.test.js  index.css  index.js  themes.js
soundklips_react/src/Redux/: actions.js  reducer.js  store.js
soundklips_react/src/Redux/reducers/: index.js
soundklips_react/src/api/: RouteSwitch.js  accountApi.js  fetchAPI.js  useFetch.js
soundklips_react/src/auth/: useToken.js
soundklips_react/src/components/: AudioPlayer.js  Footer.js  StorageCapacityBar.js  UI.js
soundklips_react/src/components/AudioData/: useAudioData.js
soundklips_react/src/components/AudioModal/: AudioModal.js  AudioModalAPI.js  useForm.js
soundklips_react/src/components/AudioPlayer/: AudioPlayer.js  AudioPlayerApi.js
soundklips_react/src/components/DrawerLeft/: DrawerLeft.js  NavData.js
soundklips_react/src/components/mui/: AcctCreationProgress.js  BasicMenu.js  CircularLoading.js  LinearBuffer.js  Snackbar.js
soundklips_react/src/pages/: index.js
soundklips_react/src/pages/Account/: Account.js  Settings.js
soundklips_react/src/utils/: useLocalStorage.js
(+14 files in other folders)
